Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Virtual-treeview by Virtual-TreeView</title>
+    <meta name="description" content="Virtual-treeview : Virtual Treeview is a Delphi treeview control">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Virtual-treeview</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Virtual-treeview</h1>
-        <p class="header">Virtual Treeview is a Delphi treeview control</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/Virtual-TreeView/Virtual-TreeView/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/Virtual-TreeView/Virtual-TreeView/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/Virtual-TreeView/Virtual-TreeView">View On GitHub</a></li>
-        </ul>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/Virtual-TreeView/Virtual-TreeView">View on GitHub</a>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/Virtual-TreeView">Virtual-TreeView</a></p>
+          <h1 id="project_title">Virtual-treeview</h1>
+          <h2 id="project_tagline">Virtual Treeview is a Delphi treeview control</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/Virtual-TreeView/Virtual-TreeView/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Virtual-TreeView/Virtual-TreeView/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      </header>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="virtual-treeview" class="anchor" href="#virtual-treeview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Virtual-TreeView</h1>
 
@@ -73,11 +74,17 @@
 
 <p>JAM Software took Virtual Treeview under its wing, but not much will change besides the homepage and download location. Please read this press release for further details.</p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Virtual-treeview maintained by <a href="https://github.com/Virtual-TreeView">Virtual-TreeView</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+    
+
   </body>
 </html>
